--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "~5.6",
 	"zendframework/zendframework": "2.5.3",
-        "dino/dompdf-module": "v0.2.0",
+	"dino/dompdf-module": "dev-master",
         "predis/predis": "1.0"
     },
     "require-dev": {
